# qingshi-khd-muban

./: .env.example  .gitignore  README.md  api-spec.json  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: project-structure.mdc
docs/: libav-integration.md  resource-encryption.md
public/: brand.json
scripts/: dy_collection_旅行熊.csv  encrypt-resource.mjs  test_douyin_fetch.py  test_douyin_fetch2.py  test_douyin_fetch3.py  xhs_capture.py  xhs_phone_scraper.py
scripts/ks_scroll_scraper/: Cargo.toml  batch_test.ps1  test_custom.csv  test_ids.py  test_search_user.py
scripts/ks_scroll_scraper/src/: main.rs
src/: App.vue  brand.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md  brand_config.enc
src-tauri/src/: app_config.rs  cdp_parse.rs  chrome_app.rs  database.rs  download_accounts.rs  download_parse.rs  lib.rs  main.rs  resource_loader.rs
src-tauri/src/media/: concat.rs  encoder.rs  error.rs  extract.rs  filter.rs  merge.rs  mod.rs  remux.rs  silence.rs  smart_cut.rs  trim.rs
src/api/: auth.ts  brand.ts  pay.ts  version.ts
src/app/: routes.ts
src/app/pages/: AccountManagerView.vue  ChromeDemoView.vue  PlaceholderView.vue  SettingsView.vue  VideoDownloadView.vue
src/components/: DisclaimerDialog.vue  GlobalDialog.vue  TitleBar.vue
src/composables/: useAuth.ts  useChangePassword.ts  useCheckin.ts  useContact.ts  useDisclaimer.ts  useForgotPassword.ts  useGuestPay.ts  useLogin.ts  useProfile.ts  useRecharge.ts  useRechargePage.ts  useRegister.ts  useUnbindDevice.ts  useUnbindDevicePage.ts  useVersionUpdate.ts
src/dev/: BrandManager.vue  VersionManager.vue
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: user.ts
src/styles/: global.css
src/templates/dark/: DESIGN.md  MainLayout.vue  MainView.vue  TitleBar.vue
src/templates/dark/auth/: ForgotPasswordView.vue  LoginView.vue  RechargeView.vue  RegisterView.vue  UnbindDeviceView.vue
src/templates/green/: DESIGN.md  MainLayout.vue  MainView.vue  TitleBar.vue
src/templates/green/auth/: ForgotPasswordView.vue  LoginView.vue  RechargeView.vue  RegisterView.vue  UnbindDeviceView.vue
src/templates/orange/: DESIGN.md  MainLayout.vue  MainView.vue  TitleBar.vue
src/templates/orange/auth/: ForgotPasswordView.vue  LoginView.vue  RechargeView.vue  RegisterView.vue  UnbindDeviceView.vue  auth-shared.css
src/utils/: config.ts  device.ts  dialog.ts  heartbeat.ts  logger.ts  request.ts  session.ts  sign.ts  storage.ts  window.ts
src/views/: MainView.vue
src/views/auth/: ForgotPasswordView.vue  LoginView.vue  RechargeView.vue  RegisterView.vue  UnbindDeviceView.vue
