[package]
name = "qingshi-khd-muban"
version = "0.1.0"
description = "青拾客户端模板"
authors = ["qingshi"]
edition = "2021"

[lib]
name = "qingshi_khd_muban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["stream", "json", "gzip", "brotli", "deflate", "blocking"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
log = "0.4"
tokio = { version = "1", features = ["sync", "fs", "time", "macros", "rt"] }
urlencoding = "2"
md5 = "0.7"
rquest = { version = "5", features = ["json", "gzip", "brotli", "deflate", "cookies"] }
rquest-util = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
webview2-com = "0.38"
windows = { version = "0.61", features = ["Web_Http"] }
