[package]
name = "qingshi-khd-muban"
version = "0.1.0"
description = "青拾客户端模板"
authors = ["qingshi"]
edition = "2021"

[lib]
name = "qingshi_khd_muban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["stream", "json", "gzip", "brotli", "deflate", "blocking"] }
futures-util = "0.3"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-single-instance = "2"
thiserror = "2"

# ── 视频处理（libav 静态链接，feature-gated）──
# ffmpeg-next 8.1 匹配 vcpkg 装的 FFmpeg 8.1。不启用 `build` feature，
# 避免 ffmpeg-next 自己 clone ffmpeg 源码编译，而是用 vcpkg 预装的静态库。
#
# 构建前置要求（详见 docs/libav-integration.md）：
# 1. vcpkg install ffmpeg:x64-windows-static-release
# 2. 环境变量 FFMPEG_DIR=E:\vcpkg\installed\x64-windows-static-release
# 3. 环境变量 VCPKG_ROOT=E:\vcpkg
[dependencies.ffmpeg-next]
version = "8.1"
optional = true
default-features = false
features = ["codec", "format", "software-resampling", "software-scaling"]

[features]
default = []
# 启用视频处理（libav 静态链接）。产品要用 media 模块时在自己 Cargo.toml 里开启。
# 不启用时相关代码被 #[cfg] 跳过，编译零开销，不依赖 vcpkg。
media = ["dep:ffmpeg-next"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
