[package]
name = "ks_scroll_scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ks_scraper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
csv = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
